--- a/index.html
+++ b/index.html
@@ -267,13 +267,28 @@
         <div class="section">
             <h2 id="confpapers">Publications</h2>
 
+            <div> <strong>2022</strong><br />
+                <div class="paper" id="cvpr22"><img class="paper" src="images/styleerd.png" title="styleerd" />
+                    <div> <strong>Style‐ERD: Responsive and Coherent Online Motion Style Transfer</strong><br />
+                        <br>
+                        Tianxin Tao, <strong>Xiaohang Zhan</strong>, Zhongquan Chen, Michiel van de Panne
+                        <br>
+                        <em>CVPR 2022</em><br />
+                        <br>
+                        <a href='https://tianxintao.github.io/Online-Motion-Style-Transfer/Responsive_and_Coherent_Online_Motion_Style_Transfer.pdf'>[PDF]</a>
+                        <a href='https://arxiv.org/abs/2203.02574'>[preprint]</a>
+                        <a href='https://tianxintao.github.io/Online-Motion-Style-Transfer/'>[Project Page]</a>
+                        <a href='https://github.com/tianxintao/Online-Motion-Style-Transfer'>[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
             <div> <strong>2021</strong><br />
-                <div class="paper" id="arxiv"><img class="paper" src="images/orl.png" title="orl" />
+                <div class="paper" id="neurips"><img class="paper" src="images/orl.png" title="orl" />
                     <div> <strong>Unsupervised Object-Level Representation Learning from Scene Images</strong><br />
                         <br>
                         Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
                         <br>
-                        <em>Conference on Neural Information Processing Systems (NeurIPS), 2021</em><br />
+                        <em>NeurIPS 2021</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2106.11952'>[preprint]</a>
                         <a href='https://www.mmlab-ntu.com/project/orl/'>[Project Page]</a>
@@ -287,7 +302,7 @@
                         <br>
                         Enze Xie*, Jian Ding*, Wenhai Wang, <strong>Xiaohang Zhan</strong>, Hang Xu, Zhenguo Li, Ping Luo
                         <br>
-                        <em>IEEE International Conference on Computer Vision (ICCV), 2021</em><br />
+                        <em>ICCV 2021</em><br />
                         <br>
                         <a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Xie_DetCo_Unsupervised_Contrastive_Learning_for_Object_Detection_ICCV_2021_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2102.04803'>[preprint]</a>
@@ -326,7 +341,7 @@
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
                         <br>
-                        <em>European Conference on Computer Vision (ECCV), 2020 (<font color="orange"><strong>Oral</strong></font>)</em>
+                        <em>ECCV 2020 (<font color="orange"><strong>Oral</strong></font>)</em>
                         <br>
                         <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</em><br />
                         <br>
@@ -342,7 +357,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Bo Dai, Ziwei Liu, Dahua Lin, Chen Change Loy
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>CVPR 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Self-Supervised_Scene_De-Occlusion_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2004.02788'>[preprint]</a>
@@ -358,7 +373,7 @@
                         <br>
                         <strong>Xiaohang Zhan*</strong>, Jiahao Xie*, Ziwei Liu, Yew-Soon Ong, Chen Change Loy
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
+                        <em>CVPR 2020</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Online_Deep_Clustering_for_Unsupervised_Representation_Learning_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2006.10645'>[preprint]</a>
@@ -372,7 +387,7 @@
                         <br>
                         Lei Yang, Dapeng Chen, <strong>Xiaohang Zhan</strong>, Rui Zhao, Chen Change Loy, Dahua Lin
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020</em><br />
+                        <em>CVPR 2020</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Yang_Learning_to_Cluster_Faces_via_Confidence_and_Connectivity_Estimation_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2004.00445'>[preprint]</a>
@@ -387,7 +402,7 @@
                         <br>
                         Ziwei Liu*, Zhongqi Miao*, Xingang Pan, <strong>Xiaohang Zhan</strong>, Stella X. Yu, Dahua Lin, Boqing Gong
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>CVPR 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_Open_Compound_Domain_Adaptation_CVPR_2020_paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1909.03403'>[preprint]</a>
@@ -416,7 +431,7 @@
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Jianping Shi, Xiaoou Tang, Ping Luo
                         <br>
-                        <em>IEEE International Conference on Computer Vision (ICCV), 2019</em><br />
+                        <em>ICCV 2019</em><br />
                         <br>
                         <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Pan_Switchable_Whitening_for_Deep_Representation_Learning_ICCV_2019_paper.pdf">[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.09739'>[preprint]</a>
@@ -430,7 +445,7 @@
                         <br>
                         Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>CVPR 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Large-Scale_Long-Tailed_Recognition_in_an_Open_World_CVPR_2019_paper.pdf">[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.05160'>[preprint]</a>
@@ -445,7 +460,7 @@
                         <br>
                         Lei Yang, <strong>Xiaohang Zhan</strong>, Dapeng Chen, Junjie Yan, Chen Change Loy, Dahua Lin
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
+                        <em>CVPR 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1904.02749'>[preprint]</a>
@@ -460,7 +475,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Xingang Pan, Ziwei Liu, Dahua Lin, Chen Change Loy
                         <br>
-                        <em>IEEE Conference on Computer Vision and Pattern Recognition (CVPR), 2019 </em><br />
+                        <em>CVPR 2019 </em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1903.11412'>[preprint]</a>
@@ -479,7 +494,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Junjie Yan, Dahua Lin, Chen Change Loy
                         <br>
-                        <em>European Conference on Computer Vision (ECCV), 2018</em><br />
+                        <em>ECCV 2018</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1809.01407'>[preprint]</a>
@@ -494,7 +509,7 @@
                         <br>
                         <strong>Xiaohang Zhan</strong>, Ziwei Liu, Ping Luo, Xiaoou Tang, Chen Change Loy
                         <br>
-                        <em>AAAI Conference on Artificial Intelligence (AAAI), 2018 (<font color="orange"><strong>Spotlight</strong></font>)</em><br />
+                        <em>AAAI 2018 (<font color="orange"><strong>Spotlight</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/1712.00661'>[preprint]</a>
