--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
             <h2 id="confpapers">Publications</h2>
 
             <div> <strong>2022</strong><br />
-                <div class="paper" id="cvpr22"><img class="paper" src="images/styleerd.png" title="styleerd" />
+                <div class="paper" id="cvpr22"><img class="paper" src="images/cvpr22-styleerd.png" title="styleerd" />
                     <div> <strong>Style‐ERD: Responsive and Coherent Online Motion Style Transfer</strong><br />
                         <br>
                         Tianxin Tao, <strong>Xiaohang Zhan</strong>, Zhongquan Chen, Michiel van de Panne
@@ -283,13 +283,14 @@
                     <div class="spanner"></div>
                 </div>
             <div> <strong>2021</strong><br />
-                <div class="paper" id="neurips"><img class="paper" src="images/orl.png" title="orl" />
+                <div class="paper" id="neurips"><img class="paper" src="images/neurips21-orl.png" title="orl" />
                     <div> <strong>Unsupervised Object-Level Representation Learning from Scene Images</strong><br />
                         <br>
                         Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
                         <br>
                         <em>NeurIPS 2021</em><br />
                         <br>
+                        <a href='https://proceedings.neurips.cc/paper/2021/file/f1b6f2857fb6d44dd73c7041e0aa0f19-Paper.pdf'>[PDF]</a>
                         <a href='https://arxiv.org/abs/2106.11952'>[preprint]</a>
                         <a href='https://www.mmlab-ntu.com/project/orl/'>[Project Page]</a>
                         <a href='https://github.com/Jiahao000/ORL'>[Code]</a>
