--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
 
 
 
-
+<!-- 
     <div style="clear: both;">
         <div class="section">
             <h2>News</h2>
@@ -260,7 +260,7 @@
             </div>
         </div>
     </div>
-
+ -->
 
 
     <div style="clear: both;">
@@ -268,6 +268,48 @@
             <h2 id="confpapers">Publications</h2>
 
             <div> <strong>2022</strong><br />
+
+                <div class="paper" id="pami"><img class="paper" src="images/pami-interclr.png" title="interclr" />
+                    <div> <strong>Delving into Inter-Image Invariance for Unsupervised Visual Representations</strong><br />
+                        <br>
+                        Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
+                        <br>
+                        <em>IJCV 2022</em><br />
+                        <br>
+                        <a href='https://link.springer.com/article/10.1007/s11263-022-01681-x'>[Paper]</a>
+                        <a href='https://github.com/open-mmlab/mmselfsup'>[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="pami"><img class="paper" src="images/pami-oltr.png" title="oltr" />
+                    <div> <strong>Open Long-Tailed Recognition in a Dynamic World</strong><br />
+                        <br>
+                        Ziwei Liu*, Zhongqi Miao*, <strong>Xiaohang Zhan</strong>, Jiayun Wang, Boqing Gong, Stella X. Yu
+                        <br>
+                        <em>TPAMI 2022</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2208.08349'>[Paper]</a>
+                        <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
+                        <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
+                        <a href='https://www.youtube.com/watch?v=A45wrs1g8VA'>[Demo]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/mfm.png" title="mfm" />
+                    <div> <strong>Masked Frequency Modeling for Self-Supervised Visual Pre-Training</strong><br />
+                        <br>
+                        Jiahao Xie, Wei Li, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
+                        <br>
+                        <em>ArXiv Preprints</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2206.07706'>[Paper]</a>
+                        <a href='https://www.mmlab-ntu.com/project/mfm/'>[Project Page]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="cvpr22"><img class="paper" src="images/cvpr22-styleerd.png" title="styleerd" />
                     <div> <strong>Style‐ERD: Responsive and Coherent Online Motion Style Transfer</strong><br />
                         <br>
@@ -275,14 +317,28 @@
                         <br>
                         <em>CVPR 2022</em><br />
                         <br>
-                        <a href='https://tianxintao.github.io/Online-Motion-Style-Transfer/Responsive_and_Coherent_Online_Motion_Style_Transfer.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2203.02574'>[preprint]</a>
+                        <a href='https://openaccess.thecvf.com/content/CVPR2022/supplemental/Tao_Style-ERD_Responsive_and_CVPR_2022_supplemental.pdf'>[Paper]</a>
                         <a href='https://tianxintao.github.io/Online-Motion-Style-Transfer/'>[Project Page]</a>
                         <a href='https://github.com/tianxintao/Online-Motion-Style-Transfer'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
             <div> <strong>2021</strong><br />
+
+                <div class="paper" id="pami"><img class="paper" src="images/eccv20-dgp.png" title="dgp" />
+                    <div> <strong>Exploiting Deep Generative Prior for Versatile Image Restoration and Manipulation</strong><br />
+                        <br>
+                        Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
+                        <br>
+                        <em>TPAMI 2021</em><br />
+                        <br>
+                        <a href='https://ieeexplore.ieee.org/document/9547753'>[Paper]</a>
+                        <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
+                        <a href="https://github.com/XingangPan/deep-generative-prior">[Code]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="neurips"><img class="paper" src="images/neurips21-orl.png" title="orl" />
                     <div> <strong>Unsupervised Object-Level Representation Learning from Scene Images</strong><br />
                         <br>
@@ -290,8 +346,7 @@
                         <br>
                         <em>NeurIPS 2021</em><br />
                         <br>
-                        <a href='https://proceedings.neurips.cc/paper/2021/file/f1b6f2857fb6d44dd73c7041e0aa0f19-Paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2106.11952'>[preprint]</a>
+                        <a href='https://proceedings.neurips.cc/paper/2021/file/f1b6f2857fb6d44dd73c7041e0aa0f19-Paper.pdf'>[Paper]</a>
                         <a href='https://www.mmlab-ntu.com/project/orl/'>[Project Page]</a>
                         <a href='https://github.com/Jiahao000/ORL'>[Code]</a>
                     </div>
@@ -305,8 +360,7 @@
                         <br>
                         <em>ICCV 2021</em><br />
                         <br>
-                        <a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Xie_DetCo_Unsupervised_Contrastive_Learning_for_Object_Detection_ICCV_2021_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2102.04803'>[preprint]</a>
+                        <a href='https://openaccess.thecvf.com/content/ICCV2021/papers/Xie_DetCo_Unsupervised_Contrastive_Learning_for_Object_Detection_ICCV_2021_paper.pdf'>[Paper]</a>
                         <a href="https://github.com/xieenze/DetCo">[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -320,33 +374,19 @@
                         <br>
                         <em>ArXiv Preprints</em><br />
                         <br>
-                        <a href='https://arxiv.org/abs/2011.13356'>[preprint]</a>
+                        <a href='https://arxiv.org/abs/2011.13356'>[Paper]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/interclr.png" title="interclr" />
-                    <div> <strong>Delving into Inter-Image Invariance for Unsupervised Visual Representations</strong><br />
-                        <br>
-                        Jiahao Xie, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
-                        <br>
-                        <em>ArXiv Preprints</em><br />
-                        <br>
-                        <a href='https://arxiv.org/abs/2008.11702'>[preprint]</a>
-                    </div>
-                    <div class="spanner"></div>
-                </div>
-
-                <div class="paper" id="arxiv"><img class="paper" src="images/eccv20-dgp.png" title="dgp" />
+                <div class="paper" id=""><img class="paper" src="images/eccv20-dgp.png" title="dgp" />
                     <div> <strong>Exploiting Deep Generative Prior for Versatile Image Restoration and Manipulation</strong><br />
                         <br>
                         Xingang Pan, <strong>Xiaohang Zhan</strong>, Bo Dai, Dahua Lin, Chen Change Loy, Ping Luo
                         <br>
-                        <em>ECCV 2020 (<font color="orange"><strong>Oral</strong></font>)</em>
+                        <em>ECCV 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
-                        <em>IEEE Transactions on Pattern Analysis and Machine Intelligence (TPAMI), 2021</em><br />
-                        <br>
-                        <a href='https://arxiv.org/abs/2003.13659'>[preprint]</a>
+                        <a href='https://arxiv.org/abs/2003.13659'>[Paper]</a>
                         <a href='https://xingangpan.github.io/projects/DGP.html'>[Project Page]</a>
                         <a href="https://github.com/XingangPan/deep-generative-prior">[Code]</a>
                     </div>
@@ -360,8 +400,7 @@
                         <br>
                         <em>CVPR 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
-                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Self-Supervised_Scene_De-Occlusion_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2004.02788'>[preprint]</a>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Self-Supervised_Scene_De-Occlusion_CVPR_2020_paper.pdf'>[Paper]</a>
                         <a href='projects/deocclusion/'>[Project Page]</a>
                         <a href="https://github.com/XiaohangZhan/deocclusion">[Code]</a>
                         <a href='https://www.youtube.com/watch?v=xIHCyyaB5gU'>[Demo]</a>
@@ -376,8 +415,7 @@
                         <br>
                         <em>CVPR 2020</em><br />
                         <br>
-                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Online_Deep_Clustering_for_Unsupervised_Representation_Learning_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2006.10645'>[preprint]</a>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Zhan_Online_Deep_Clustering_for_Unsupervised_Representation_Learning_CVPR_2020_paper.pdf'>[Paper]</a>
                         <a href="https://github.com/open-mmlab/OpenSelfSup">[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -390,8 +428,7 @@
                         <br>
                         <em>CVPR 2020</em><br />
                         <br>
-                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Yang_Learning_to_Cluster_Faces_via_Confidence_and_Connectivity_Estimation_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/2004.00445'>[preprint]</a>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Yang_Learning_to_Cluster_Faces_via_Confidence_and_Connectivity_Estimation_CVPR_2020_paper.pdf'>[Paper]</a>
                         <a href='http://yanglei.me/project/ltc_v2/'>[Project Page]</a>
                         <a href="https://github.com/yl-1993/learn-to-cluster">[Code]</a>
                     </div>
@@ -405,8 +442,7 @@
                         <br>
                         <em>CVPR 2020 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
-                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_Open_Compound_Domain_Adaptation_CVPR_2020_paper.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1909.03403'>[preprint]</a>
+                        <a href='http://openaccess.thecvf.com/content_CVPR_2020/papers/Liu_Open_Compound_Domain_Adaptation_CVPR_2020_paper.pdf'>[Paper]</a>
                         <a href='https://liuziwei7.github.io/projects/CompoundDomain.html'>[Project Page]</a>
                         <a href='https://www.youtube.com/watch?v=YcmgCCRA1qc'>[Demo]</a>
                         <a href='https://github.com/zhmiao/OpenCompoundDomainAdaptation-OCDA'>[Code]</a>
@@ -434,8 +470,7 @@
                         <br>
                         <em>ICCV 2019</em><br />
                         <br>
-                        <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Pan_Switchable_Whitening_for_Deep_Representation_Learning_ICCV_2019_paper.pdf">[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.09739'>[preprint]</a>
+                        <a href="http://openaccess.thecvf.com/content_ICCV_2019/papers/Pan_Switchable_Whitening_for_Deep_Representation_Learning_ICCV_2019_paper.pdf">[Paper]</a>
                         <a href="https://github.com/XingangPan/Switchable-Whitening">[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -448,8 +483,7 @@
                         <br>
                         <em>CVPR 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
-                        <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Large-Scale_Long-Tailed_Recognition_in_an_Open_World_CVPR_2019_paper.pdf">[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.05160'>[preprint]</a>
+                        <a href="http://openaccess.thecvf.com/content_CVPR_2019/papers/Liu_Large-Scale_Long-Tailed_Recognition_in_an_Open_World_CVPR_2019_paper.pdf">[Paper]</a>
                         <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
                         <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
                     </div>
@@ -464,8 +498,7 @@
                         <em>CVPR 2019 (<font color="orange"><strong>Oral</strong></font>)</em><br />
                         <br>
                         <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_cluster.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1904.02749'>[preprint]</a>
-                        <a href='http://yanglei.me/project/ltc/'>[Project Page]</a>
+                        <a href='https://openaccess.thecvf.com/content_CVPR_2019/papers/Yang_Learning_to_Cluster_Faces_on_an_Affinity_Graph_CVPR_2019_paper.pdf'>[Paper]</a>
                         <a href='https://github.com/yl-1993/learn-to-cluster'>[Code]</a>
                     </div>
                     <div class="spanner"></div>
@@ -478,8 +511,7 @@
                         <br>
                         <em>CVPR 2019 </em><br />
                         <br>
-                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/cvpr_2019_self.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1903.11412'>[preprint]</a>
+                        <a href='https://openaccess.thecvf.com/content_CVPR_2019/supplemental/Zhan_Self-Supervised_Learning_via_CVPR_2019_supplemental.pdf'>[Paper]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CMP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/conditional-motion-propagation/'>[Code]</a>
                         <a href='https://www.youtube.com/watch?v=6R_oJCq5qMw'>[Demo]</a>
@@ -497,8 +529,7 @@
                         <br>
                         <em>ECCV 2018</em><br />
                         <br>
-                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/eccv_2018_cdp.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1809.01407'>[preprint]</a>
+                        <a href='https://openaccess.thecvf.com/content_ECCV_2018/papers/Xiaohang_Zhan_Consensus-Driven_Propagation_in_ECCV_2018_paper.pdf'>[Paper]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/CDP/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/cdp/'>[Code]</a>
                     </div>
@@ -512,8 +543,7 @@
                         <br>
                         <em>AAAI 2018 (<font color="orange"><strong>Spotlight</strong></font>)</em><br />
                         <br>
-                        <a href='http://personal.ie.cuhk.edu.hk/~ccloy/files/aaai_2018_mix.pdf'>[PDF]</a>
-                        <a href='https://arxiv.org/abs/1712.00661'>[preprint]</a>
+                        <a href='https://ojs.aaai.org/index.php/AAAI/article/view/12331'>[Paper]</a>
                         <a href='http://mmlab.ie.cuhk.edu.hk/projects/M&M/'>[Project Page]</a>
                         <a href='https://github.com/XiaohangZhan/mix-and-match'>[Code]</a>
                     </div>
@@ -570,7 +600,7 @@
     <div style="clear: both;">
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
-                <li>Top 100 Chinese New Stars in Artificial Intelligence by Baidu Scholar, <a href="https://mp.weixin.qq.com/s/v7ITiZXOJiDUbPlRlcqQRA">AI华人新星百强</a> (100 out of 45205).</li>
+                <li>Top 100 Chinese New Stars in Artificial Intelligence, <a href="https://xueshu.baidu.com/usercenter/index/aischolar">AI华人新星百强</a> (100 out of 45205), 2021, Baidu Scholar.</li>
                 <li>Huawei Genius Youth, 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
