--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
                 I'm currently a researcher in 2012 Labs, Huawei. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
-                My research interests include unsupervised learning and computer vision from 2016, and computer graphics from 2020.
+                My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020.
             </div>
         </div>
     </div>
