--- a/index.html
+++ b/index.html
@@ -323,6 +323,19 @@
                     </div>
                     <div class="spanner"></div>
                 </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/bsim.png" title="bsim" />
+                    <div> <strong>Beyond Single Instance Multi-view Unsupervised Representation Learning</strong><br />
+                        <br>
+                        Xiangxiang Chu, <strong>Xiaohang Zhan</strong>, Xiaolin Wei
+                        <br>
+                        <em>BMVC 2022</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2011.13356'>[Paper]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+                
             <div> <strong>2021</strong><br />
 
                 <div class="paper" id="pami"><img class="paper" src="images/eccv20-dgp.png" title="dgp" />
@@ -367,17 +380,6 @@
                 </div>
 
             <div> <strong>2020</strong><br />
-                <div class="paper" id="arxiv"><img class="paper" src="images/bsim.png" title="bsim" />
-                    <div> <strong>Beyond Single Instance Multi-view Unsupervised Representation Learning</strong><br />
-                        <br>
-                        Xiangxiang Chu, <strong>Xiaohang Zhan</strong>, Xiaolin Wei
-                        <br>
-                        <em>ArXiv Preprints</em><br />
-                        <br>
-                        <a href='https://arxiv.org/abs/2011.13356'>[Paper]</a>
-                    </div>
-                    <div class="spanner"></div>
-                </div>
 
                 <div class="paper" id=""><img class="paper" src="images/eccv20-dgp.png" title="dgp" />
                     <div> <strong>Exploiting Deep Generative Prior for Versatile Image Restoration and Manipulation</strong><br />
