--- a/index.html
+++ b/index.html
@@ -297,12 +297,12 @@
                     <div class="spanner"></div>
                 </div>
 
-                <div class="paper" id="arxiv"><img class="paper" src="images/mfm.png" title="mfm" />
+                <div class="paper" id="iclr23"><img class="paper" src="images/mfm.png" title="mfm" />
                     <div> <strong>Masked Frequency Modeling for Self-Supervised Visual Pre-Training</strong><br />
                         <br>
                         Jiahao Xie, Wei Li, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
                         <br>
-                        <em>ArXiv Preprints</em><br />
+                        <em>ICLR 2023</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2206.07706'>[Paper]</a>
                         <a href='https://www.mmlab-ntu.com/project/mfm/'>[Project Page]</a>
