--- a/index.html
+++ b/index.html
@@ -267,6 +267,20 @@
         <div class="section">
             <h2 id="confpapers">Publications</h2>
 
+            <div> <strong>2023</strong><br />
+                <div class="paper" id="iclr23"><img class="paper" src="images/mfm.png" title="mfm" />
+                    <div> <strong>Masked Frequency Modeling for Self-Supervised Visual Pre-Training</strong><br />
+                        <br>
+                        Jiahao Xie, Wei Li, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
+                        <br>
+                        <em>ICLR 2023</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2206.07706'>[Paper]</a>
+                        <a href='https://www.mmlab-ntu.com/project/mfm/'>[Project Page]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
             <div> <strong>2022</strong><br />
 
                 <div class="paper" id="pami"><img class="paper" src="images/pami-interclr.png" title="interclr" />
@@ -293,19 +307,6 @@
                         <a href='https://liuziwei7.github.io/projects/LongTail.html'>[Project Page]</a>
                         <a href='https://github.com/zhmiao/OpenLongTailRecognition-OLTR'>[Code]</a>
                         <a href='https://www.youtube.com/watch?v=A45wrs1g8VA'>[Demo]</a>
-                    </div>
-                    <div class="spanner"></div>
-                </div>
-
-                <div class="paper" id="iclr23"><img class="paper" src="images/mfm.png" title="mfm" />
-                    <div> <strong>Masked Frequency Modeling for Self-Supervised Visual Pre-Training</strong><br />
-                        <br>
-                        Jiahao Xie, Wei Li, <strong>Xiaohang Zhan</strong>, Ziwei Liu, Yew Soon Ong, Chen Change Loy
-                        <br>
-                        <em>ICLR 2023</em><br />
-                        <br>
-                        <a href='https://arxiv.org/abs/2206.07706'>[Paper]</a>
-                        <a href='https://www.mmlab-ntu.com/project/mfm/'>[Project Page]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
