add cvpr; update experience

--- a/index.html
+++ b/index.html
@@ -188,8 +188,6 @@
             <img title="XiaohangZhan" style="float: left; padding-left: .01em; height: 140px;" src="XiaohangZhan.jpg" />
             <div style="padding-left: 12em; vertical-align: top; height: 120px;"><span style="line-height: 150%; font-size: 20pt;">Xiaohang Zhan (詹晓航)</span><br />
                 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-2136-7592" href="https://orcid.org/0000-0003-2136-7592" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0003-2136-7592</a></div>
-                <span><strong>Researcher</strong></span><br />
-                <span>Central Media Technology Institute, 2012 Labs, <a href='https://www.huawei.com/en/'>Huawei Technologies Co., Ltd</a></span><br />
                 <span><a href="mailto:xiaohangzhan@outlook.com">email</a></span><br />
             </div>
         </div>
@@ -199,7 +197,7 @@
         <div class="section">
             <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
-                I'm currently a researcher in 2012 Labs, Huawei. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
+                I'm currently a researcher in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK Multimedia Laboratory</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
                 My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020.
@@ -210,13 +208,22 @@
     <div style="clear: both;">
         <div class="section">
             <h2 id="work">Experience</h2>
-            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon.jpeg" title="huawei" />
-                <div> <font size="20"><strong>Central Media Technology Institute, 2012 Labs, Huawei Technologies Co., Ltd</strong></font><br />
+            <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon.png" title="tencent" />
+                <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
                     <br>
-                    <font color="gray">August 2020 - Now. Researcher (Huawei Genius Youth Program, 2020).</font>
+                    <font color="gray">March 2023 - Now. Researcher.</font>
                 </div>
                 <div class="spanner"></div>
             </div>
+
+            <div class="edu" id="huawei"><img class="icon" src="icons/huawei_icon.jpeg" title="huawei" />
+                <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
+                    <br>
+                    <font color="gray">August 2020 - March 2023. Researcher.</font>
+                </div>
+                <div class="spanner"></div>
+            </div>
+
         </div>
     </div>
 
@@ -268,6 +275,20 @@
             <h2 id="confpapers">Publications</h2>
 
             <div> <strong>2023</strong><br />
+
+                <div class="paper" id="cvpr23"><img class="paper" src="images/rabit-cvpr23.png" title="rabit" />
+                    <div> <strong>RaBit: Parametric Modeling of 3D Biped Cartoon Characters with a Topological-consistent Dataset</strong><br />
+                        <br>
+                        Zhongjin Luo*, Shengcai Cai*, Jinguo Dong, Ruibo Ming, Liangdong Qiu, <strong>Xiaohang Zhan</strong>, Xiaoguang Han
+                        <br>
+                        <em>CVPR 2023</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2303.12564'>[Paper]</a>
+                        <a href='https://gaplab.cuhk.edu.cn/projects/RaBit/dataset.html'>[Project Page]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
                 <div class="paper" id="iclr23"><img class="paper" src="images/mfm.png" title="mfm" />
                     <div> <strong>Masked Frequency Modeling for Self-Supervised Visual Pre-Training</strong><br />
                         <br>
@@ -604,7 +625,7 @@
         <div class="section"><h2>Honors and Awards</h2>
             <div class="paper">
                 <li>Top 100 Chinese New Stars in Artificial Intelligence, <a href="https://xueshu.baidu.com/usercenter/index/aischolar">AI华人新星百强</a> (100 out of 45205), 2021, Baidu Scholar.</li>
-                <li>Huawei Genius Youth, 2020</li>
+                <li>Huawei Genius Youth Program, 2020</li>
                 <li>Winner of <a href='https://sites.google.com/view/fb-ssl-challenge-iccv19/home'>Facebook AI Self-Supervision Challenge 2019</a></li>
                 <li>Hong Kong PhD Fellowship, 2017, the Research Grants Council (RGC) of Hong Kong</li>
                 <li>Outstanding Graduate of Tsinghua University, 2016 (63 winners out of about 3500 graduates)</li>
