--- a/index.html
+++ b/index.html
@@ -284,7 +284,8 @@
                         <em>CVPR 2023</em><br />
                         <br>
                         <a href='https://arxiv.org/abs/2303.12564'>[Paper]</a>
-                        <a href='https://gaplab.cuhk.edu.cn/projects/RaBit/dataset.html'>[Project Page]</a>
+                        <a href='https://gaplab.cuhk.edu.cn/projects/RaBit/'>[Project Page]</a>
+                        <a href='https://gaplab.cuhk.edu.cn/projects/RaBit/dataset.html'>[Dataset]</a>
                     </div>
                     <div class="spanner"></div>
                 </div>
