--- a/index.html
+++ b/index.html
@@ -211,7 +211,9 @@
             <div class="edu" id="tencent"><img class="icon" src="icons/tencent_icon.png" title="tencent" />
                 <div> <font size="20"><strong>AI Lab, Tencent</strong></font><br />
                     <br>
-                    <font color="gray">March 2023 - Now. Researcher.</font>
+                    <font color="gray">March 2023 - Now. Researcher.</font><br />
+                    <br>
+                    (recruiting interns)
                 </div>
                 <div class="spanner"></div>
             </div>
