--- a/index.html
+++ b/index.html
@@ -235,7 +235,9 @@
             <div class="edu" id="cuhk"><img class="icon" src="icons/cuhk_icon.png" title="cuhk" />
                 <div> <font size="20"><strong>The Chinese University of Hong Kong</strong></font><br />
                     <br>
-                    <font color="gray">August 2017 - August 2020 (1 year shortened). Ph.D. in Information Engineering.</font>
+                    <font color="gray">August 2017 - August 2020 (1 year shortened). Ph.D. in Information Engineering.</font><br />
+                    <br>
+                    <font color="gray">August 2016 - August 2017. Research assistant.</font>
                 </div>
                 <div class="spanner"></div>
             </div>
