--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                     <br>
                     <font color="gray">March 2023 - Now. Researcher.</font><br />
                     <br>
-                    (recruiting interns)
+                    (recruiting 1 employee and some interns in research of digital human & human motion generation & character animation)
                 </div>
                 <div class="spanner"></div>
             </div>
