--- a/index.html
+++ b/index.html
@@ -213,7 +213,9 @@
                     <br>
                     <font color="gray">March 2023 - Now. Researcher.</font><br />
                     <br>
-                    (recruiting 1 employee and some interns in research of digital human & human motion generation & character animation)
+                    <font color="gray">Research in character animation, including foundation models for human motion, body & face motion generation.</font>
+                    <br>
+                    (recruiting full-time employees and interns)
                 </div>
                 <div class="spanner"></div>
             </div>
@@ -222,6 +224,8 @@
                 <div> <font size="20"><strong>2012 Labs, Huawei</strong></font><br />
                     <br>
                     <font color="gray">August 2020 - March 2023. Researcher.</font>
+                    <br>
+                    <font color="gray">Research and commercialization (商用落地) of digital human technologies, including parametric modeling, auto rigging, body & face motion capture & synthesis, etc.</font>
                 </div>
                 <div class="spanner"></div>
             </div>
