--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         <div class="section">
             <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
-                I'm currently a researcher in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
+                I'm currently a senior researcher in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
                 My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020.
@@ -213,7 +213,7 @@
                     <br>
                     <font color="gray">March 2023 - Now. Researcher.</font><br />
                     <br>
-                    <font color="gray">Research in character animation and technology productization in Game/XR industry.</font>
+                    <font color="gray">Research in computer graphics, character animation, 3D content generation and technology productization in Game/XR industry.</font>
                     <br>
                     (recruiting full-time employees and interns)
                 </div>
