--- a/index.html
+++ b/index.html
@@ -188,7 +188,8 @@
             <img title="XiaohangZhan" style="float: left; padding-left: .01em; height: 140px;" src="XiaohangZhan.jpg" />
             <div style="padding-left: 12em; vertical-align: top; height: 120px;"><span style="line-height: 150%; font-size: 20pt;">Xiaohang Zhan (詹晓航)</span><br />
                 <div itemscope itemtype="https://schema.org/Person"><a itemprop="sameAs" content="https://orcid.org/0000-0003-2136-7592" href="https://orcid.org/0000-0003-2136-7592" target="orcid.widget" rel="noopener noreferrer" style="vertical-align:top;"><img src="https://orcid.org/sites/default/files/images/orcid_16x16.png" style="width:1em;margin-right:.5em;" alt="ORCID iD icon">orcid.org/0000-0003-2136-7592</a></div>
-
+                <br>
+                Email: xiaohangzhan[AT]outlook[dot]com
             </div>
         </div>
     </div>
