--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         <div class="section">
             <h2>About Me (<a href='https://github.com/XiaohangZhan'>GitHub</a>) (<a href='https://scholar.google.com/citations?user=QfquhDEAAAAJ'>Google scholar</a>)</h2>
             <div class="paper">
-                I'm currently a senior researcher in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
+                I'm currently a senior research scientist in AI Lab, Tencent. I received my Ph.D. degree in <a href='http://mmlab.ie.cuhk.edu.hk/'>CUHK MMLab</a> in 2020, supervised by <a href='http://personal.ie.cuhk.edu.hk/~ccloy/'>Chen Change Loy</a> and <a href='https://www.ie.cuhk.edu.hk/people/xotang.shtml'>Xiaoou Tang</a>.
                 Before that, I received my B.E. degree in the <a href='http://www.svm.tsinghua.edu.cn/'>Department of Automative Engineering</a> (renamed School of Vehicle and Mobility) in <a href='http://www.tsinghua.edu.cn/'>Tsinghua University</a>, Beijing, China in 2016.
                 <br>
                 My research interests include unsupervised learning and computer vision from 2016, and computer graphics, character animation, 3D content generation from 2020.
@@ -284,6 +284,30 @@
             <h2 id="confpapers">Publications</h2>
 
             <div> <strong>2023</strong><br />
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/semanticboost-arxiv.png" title="semanticboost" />
+                    <div> <strong>SemanticBoost: Elevating Motion Generation with Augmented Textual Cues</strong><br />
+                        <br>
+                        Xin He, Shaoli Huang, <strong>Xiaohang Zhan</strong>, Chao Wen, Ying Shan
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2310.20323'>[Paper]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
+
+                <div class="paper" id="arxiv"><img class="paper" src="images/tapmo-arxiv.png" title="tapmo" />
+                    <div> <strong>TapMo: Shape-aware Motion Generation of Skeleton-free Characters</strong><br />
+                        <br>
+                        Jiaxu Zhang, Shaoli Huang, Zhigang Tu, Xin Chen, <strong>Xiaohang Zhan</strong>, Gang Yu, Ying Shan
+                        <br>
+                        <em>arXiv preprint</em><br />
+                        <br>
+                        <a href='https://arxiv.org/abs/2310.12678'>[Paper]</a>
+                    </div>
+                    <div class="spanner"></div>
+                </div>
 
                 <div class="paper" id="cvpr23"><img class="paper" src="images/rabit-cvpr23.png" title="rabit" />
                     <div> <strong>RaBit: Parametric Modeling of 3D Biped Cartoon Characters with a Topological-consistent Dataset</strong><br />
