--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                         <a href='https://blackgold3.github.io/SemanticBoost/'>[Project Page]</a>
                         <a href='https://github.com/blackgold3/SemanticBoost'>[Code]</a>
                         <a href='https://discord.gg/rrayYqZ4tf'>[Discord]</a>
-                        <a href='https://huggingface.co/spaces/Kleinhe/SemanticBoost'>[HuggingFace]</a>
+                        <!-- <a href='https://huggingface.co/spaces/Kleinhe/SemanticBoost'>[HuggingFace]</a> -->
                     </div>
                     <div class="spanner"></div>
                 </div>
